Changes from jTDS 1.2
=====================

12/21/2005 - David Kilzer
 o Extracted the JtdsDataSource.addNonNullProperties() method from
   getConnection(String, String) method for easier testing.  Added inner
   test class Test_JtdsDataSource_addNonNullProperties to
   JtdsDataSourceUnitTest to test new addNonNullProperties() method.
   Replaced call to Exception.getStackTrace() in
   getConnection(String, String) with a call to Support.linkException().
   Fixed addNonNullProperties() to set the serverType parameter if it is
   not null.  Note that this does not affect Driver.parseURL() which
   ends up (re)setting that property from the URL.

12/20/2005 - David Kilzer
 o Implemented RFE [1291335] Provide a mechanism for binding to a local
   IP address.  New "bindAddress" parameter introduced (Java 1.4 and newer
   only).
 o Updated UnitTestBase.invoke*() methods to link original exceptions to
   RuntimeExceptions.  Added new UnitTestBase.invokeSetInstanceField()
   method.  Added back suite tests to JtdsDataSourceUnitTest that test
   default values on the JtdsDataSource class and its getReference()
   method by setting the default values through reflection before testing.
   This allows one new test method to be added to the
   DefaultPropertiesTestLibrary class and for tests to fail everywhere a
   developer hasn't implemented a new driver property yet.

12/19/2005 - David Kilzer
 o Changed reference to old 'TdsDataSource' class in faq.html to newer
   'JtdsDataSource' class.
 o Alphabetized parameters in faq.html to make them easier to find.
 o Added missing </code> tag in "badrpc" question in faq.html.
 o Updated the loginTimeout parameter information in faq.html to document
   behavior with TCP/IP connections.
 o Fixed the "What are the class names...?" question to match the TOC
   entry.

12/19/2005 - Alin Sinpalean
 o Minor optimization in determining the scale for decimal parameters.

12/05/2005 - Alin Sinpalean