@@ -1,6 +1,12 @@
 Changes from jTDS 1.2
 =====================
 
+12/22/2005 - David Kilzer
+ o Replaced JtdsObjectFactoryUnitTest.testAllProperties() method with an
+   inner class that extends DefaultPropertiesTestLibrary to make this
+   test class fail automatically when a new property is added to the
+   library class.  Removed stale comments in JtdsDataSourceUnitTest.
+
 12/21/2005 - David Kilzer
  o Extracted the JtdsDataSource.addNonNullProperties() method from
    getConnection(String, String) method for easier testing.  Added inner
